--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 					</div>
                     <div class="col-xs-12 col-md-6 col-md-offset-1">
                         <h2 class="align">Przyszła współpraca?</h2>
-                        <p class="text-justify">Jeśli moja oferta okazała się być dla Ciebie interesująca, zachęcam do kontaktu, a także do zapoznania się z moim CV. Prześlij do mnie wiadomość, a postaram się odpowiedzieć na nią jak najszybciej będzie to możliwe. Wspólnie dobierzemy własciwe rozwiązania, które zaspokoją Twoje potrzeby. Nie czekaj ani chwili dłużej! Wypełnij formularz obok i naciśnij przycisk "Wyjślij". </p>
+                        <p class="text-justify">Jeśli moja oferta okazała się być dla Ciebie interesująca, zachęcam do kontaktu. Prześlij do mnie wiadomość, a postaram się na nią odpowiedzieć, jak najszybciej będzie to możliwe. Wspólnie dobierzemy własciwe rozwiązania, które zaspokoją Twoje potrzeby. Nie czekaj ani chwili dłużej! Wypełnij formularz obok i naciśnij przycisk "Wyjślij", aby się ze mną skontaktować. </p>
                     </div>
                 </div>
             </div>   
