--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img src="./image/Grzegorz%20fotka.jpg" class="img-responsive img-thumbnail center-block">
           </div>
           <div class="col-xs-12 col-md-7 col-md-offset-1">
-            <p class="text-justify">Cześć! Mam na imię Grzegorz i mieszkam w Gdańsku. Jako front-end developer tworzę funkcjonalne i estetyczne strony internetowe, wykorzystując różne technologie webowe. Cały czas doskonalę nabyte umiejętności i chciałbym rozwinąć moją pasję, uczestnicząc w ciekawych projektach.<br><br>Moim celem zawodym jest zmiana branży oraz rozpoczęcie pracy zawodowej na stanowisku junior front-end developera. Zachęcam do zapoznania się z moim Portfolio oraz profilem <a href="https://www.linkedin.com/in/grzegorz-świderski-9b6928124" target="_blank">Linkedin.</a></p>
+            <p class="text-justify">Cześć! Mam na imię Grzegorz i mieszkam w Gdańsku. Jako front-end developer tworzę funkcjonalne i estetyczne strony internetowe, wykorzystując różne technologie webowe. Cały czas doskonalę nabyte umiejętności i chciałbym rozwinąć moją pasję, uczestnicząc w ciekawych projektach.<br><br>Moim celem zawodowym jest zmiana branży oraz rozpoczęcie pracy na stanowisku junior front-end developera. Zachęcam do zapoznania się z moim Portfolio oraz profilem <a href="https://www.linkedin.com/in/grzegorz-świderski-9b6928124" target="_blank">Linkedin.</a></p>
           </div>
         </div>
       </div>
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-12">
             <h2 class="text-center">Czego dotychczas się nauczyłem?</h2>
-            <p class="text-justify">Podczas dotyczasowej nauki programowania zapoznałem się z niezbędnymi informacjami, które pozwalają mi tworzyć w pełni funkcjonalne strony internetowe oraz pisać proste skrypty i aplikacje webowe. Główny nacisk położyłem na naukę HTML, CSS3, Sass, RWD oraz frameworku Bootstrap. Dodatkowo przyswoiłem podstawowe informacje dotyczące pracy z językiem programowania jakim jest javaScript oraz powiązaną z nim biblioteką jQuery, których znajomość umożliwia mi na tworzenie "żywych" stron internetowych. Poziom zgoromadzonej przeze mnie dotyhczas wiedzy poddałem mojej subiektywnej ocenie w skali od 1 do 5. W ostatnim zbiorze zawarłem zagadnienia, których nauką chciałbym zająć się w najbliższym czasie.</p>
+            <p class="text-justify">Podczas dotyczasowej nauki programowania zapoznałem się z niezbędnymi informacjami, które pozwalają mi tworzyć w pełni funkcjonalne strony internetowe oraz pisać proste skrypty i aplikacje webowe. Główny nacisk położyłem na naukę HTML, CSS3, Sass, RWD oraz frameworku Bootstrap. Dodatkowo przyswoiłem podstawowe informacje dotyczące pracy z językiem programowania jakim jest javaScript oraz powiązaną z nim biblioteką jQuery, których znajomość umożliwia mi na tworzenie "żywych" stron internetowych. W ostatnim zbiorze technologii zawarłem zagadnienia, których nauką chciałbym zająć się w najbliższym czasie.</p>
           </div>
           <div class="col-xs-12 col-md-12">
             <div class="topbar">
@@ -92,7 +92,7 @@
                 <li data-pile="Technologie statyczne:">
                   <span class="tp-info">
                     <span>
-                       Tworzenie sematycznego kodu zgodnie ze standardami W3C.
+                       Tworzenie semantycznego kodu zgodnie ze standardami W3C.
                     </span>
                   </span>
                   <img src="icons/whiteBackground/HTML5.png">
@@ -108,7 +108,7 @@
                 <li data-pile="Technologie statyczne:">
                   <span class="tp-info center-block">
                     <span>
-                       Wykorzystanie do szybszej i wydajniejszej pracy.
+                       Wykorzystanie składni do szybszej i wydajniejszej pracy.
                     </span>
                   </span>
                   <img src="icons/whiteBackground/sass.png">
@@ -127,7 +127,7 @@
                 <li data-pile="Technologie aktywne:">
                   <span class="tp-info">
                     <span>
-                      Używanie komponentów i rowiązań css/js.
+                      Używanie komponentów i rozwiązań css/js.
                     </span>
                   </span>
                   <img src="icons/whiteBackground/bootstrap.png">
@@ -178,7 +178,7 @@
                 <li data-pile="Pozostałe technologie:">
                   <span class="tp-info">
                     <span>
-                      Odwozorowanie pixel perfect według projektu.
+                      Odwzorowanie pixel perfect według projektu.
                     </span>
                   </span>
                   <img src="icons/whiteBackground/ps.png">
@@ -233,7 +233,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
             <h2 class="text-center">Moje projekty</h2>
-            <p class="text-justify">Każdy z moich projektów został oparty o poznane przeze mnie technologie. Dodatkowo przykładowe strony zostały wzbogacone o w pełni zuatomatyzowany system kompilacji Sass na CSS3 za pośrednictwem Grunta. </p>
+            <p class="text-justify">Każdy z moich projektów został oparty o poznane przeze mnie technologie. Dodatkowo przykładowe strony zostały wzbogacone o w pełni zuatomatyzowany system kompilacji składni Sass na CSS3 za pośrednictwem Grunta. </p>
           </div>
                     
           <!--karuzela-->
