--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-12">
             <h2 class="text-center">Czego dotychczas się nauczyłem?</h2>
-            <p class="text-justify">Podczas dotyczasowej nauki programowania zapoznałem się z niezbędnymi informacjami, które pozwalają mi tworzyć w pełni funkcjonalne strony internetowe oraz pisać proste skrypty i aplikacje webowe. Główny nacisk położyłem na naukę HTML, CSS3, Sass, RWD oraz frameworku Bootstrap. Dodatkowo przyswoiłem podstawowe informacje dotyczące pracy z językiem programowania jakim jest javaScript oraz powiązaną z nim biblioteką jQuery, których znajomość umożliwia mi na tworzenie "żywych" stron internetowych. W ostatnim zbiorze technologii zawarłem zagadnienia, których nauką chciałbym zająć się w najbliższym czasie.</p>
+            <p class="text-justify">Podczas dotychczasowej nauki programowania zapoznałem się z niezbędnymi informacjami, które pozwalają mi tworzyć w pełni funkcjonalne strony internetowe oraz pisać proste skrypty i aplikacje webowe. Główny nacisk położyłem na naukę HTML, CSS3, Sass, RWD oraz frameworku Bootstrap. Dodatkowo przyswoiłem podstawowe informacje dotyczące pracy z językiem programowania javaScript, oraz powiązaną z nim biblioteką jQuery. Ich znajomość umożliwia mi na tworzenie &bdquo;żywych&rdquo; stron internetowych. W ostatnim zbiorze technologii zawarłem zagadnienia, których nauką chciałbym zająć się w najbliższym czasie.</p>
           </div>
           <div class="col-xs-12 col-md-12">
             <div class="topbar">
@@ -213,7 +213,7 @@
                 <li data-pile="Czego się będę uczyć?">
                   <span class="tp-info">
                     <span>
-                      mangoDB
+                      mongoDB
                     </span>
                   </span>
                   <img src="icons/whiteBackground/mangoDb.png">
@@ -233,7 +233,7 @@
         <div class="row">
           <div class="col-xs-12 col-sm-12 col-md-12 col-lg-3">
             <h2 class="text-center">Moje projekty</h2>
-            <p class="text-justify">Każdy z moich projektów został oparty o poznane przeze mnie technologie. Dodatkowo przykładowe strony zostały wzbogacone o w pełni zuatomatyzowany system kompilacji składni Sass na CSS3 za pośrednictwem Grunta. </p>
+            <p class="text-justify">Każdy z moich projektów został oparty o poznane przeze mnie technologie. Dodatkowo przykładowe strony zostały wzbogacone o w pełni zautomatyzowany system kompilacji składni Sass na CSS3 za pośrednictwem Grunta. </p>
           </div>
                     
           <!--karuzela-->
@@ -372,7 +372,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-md-offset-1">
             <h2 class="align">Przyszła współpraca?</h2>
-            <p class="text-justify">Jeśli moja oferta okazała się być dla Ciebie interesująca, zachęcam do kontaktu. Prześlij do mnie wiadomość, a postaram się na nią odpowiedzieć, jak najszybciej będzie to możliwe. Wspólnie dobierzemy własciwe rozwiązania, które zaspokoją Twoje potrzeby. Nie czekaj ani chwili dłużej! Wypełnij formularz i naciśnij przycisk "Wyjślij", aby się ze mną skontaktować. </p>
+            <p class="text-justify">Jeśli moja oferta okazała się dla Ciebie być interesująca, zachęcam do kontaktu. Prześlij do mnie wiadomość, a postaram się na nią odpowiedzieć, jak najszybciej będzie to możliwe. Wspólnie dobierzemy właściwe rozwiązania, które zaspokoją Twoje potrzeby. Nie czekaj ani chwili dłużej! Wypełnij formularz i naciśnij przycisk "Wyślij", aby się ze mną skontaktować. </p>
           </div>
         </div>
       </div>   
