--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pl-PL">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -61,7 +61,7 @@
         </div>
         <div class="row">
           <div class="col-xs-6 col-xs-offset-3 col-md-2 col-md-offset-1">
-            <img src="./image/Grzegorz%20fotka.jpg" class="img-responsive img-thumbnail center-block">
+            <img src="./image/Grzegorz%20fotka.jpg" class="img-responsive img-thumbnail center-block" alt="GrzegorzSwiderski">
           </div>
           <div class="col-xs-12 col-md-7 col-md-offset-1">
             <p class="text-justify">Cześć! Mam na imię Grzegorz i mieszkam w Gdańsku. Jako front-end developer tworzę funkcjonalne i estetyczne strony internetowe, wykorzystując różne technologie webowe. Cały czas doskonalę nabyte umiejętności i chciałbym rozwinąć moją pasję, uczestnicząc w ciekawych projektach.<br><br>Moim celem zawodowym jest zmiana branży oraz rozpoczęcie pracy na stanowisku junior front-end developera. Zachęcam do zapoznania się z moim Portfolio oraz profilem <a href="https://www.linkedin.com/in/grzegorz-świderski-9b6928124" target="_blank">Linkedin.</a></p>
@@ -95,7 +95,7 @@
                        Tworzenie semantycznego kodu zgodnie ze standardami W3C.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/HTML5.png">
+                  <img src="icons/whiteBackground/HTML5.png" alt="HTML">
                 </li>
                 <li data-pile="Technologie statyczne:">
                   <span class="tp-info">
@@ -103,7 +103,7 @@
                       Kontrola układu i wyglądu strony internetowej.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/css3.png">
+                  <img src="icons/whiteBackground/css3.png" alt="CSS">
                 </li>
                 <li data-pile="Technologie statyczne:">
                   <span class="tp-info center-block">
@@ -111,7 +111,7 @@
                        Wykorzystanie składni do szybszej i wydajniejszej pracy.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/sass.png">
+                  <img src="icons/whiteBackground/sass.png" alt="Sass">
                 </li>
                 <li data-pile="Technologie statyczne:">
                   <span class="tp-info center-block">
@@ -119,7 +119,7 @@
                       Tworzenie w pełni responsywnych stron.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/rwd.png">
+                  <img src="icons/whiteBackground/rwd.png" alt="RWD">
                 </li>
 
                 <!--tech. aktywne!-->
@@ -130,7 +130,7 @@
                       Używanie komponentów i rozwiązań css/js.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/bootstrap.png">
+                  <img src="icons/whiteBackground/bootstrap.png" alt="bootstrap">
                 </li>
                 <li data-pile="Technologie aktywne:">
                   <span class="tp-info center-block">
@@ -138,7 +138,7 @@
                       Pisanie prostych skryptów.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/js.png">
+                  <img src="icons/whiteBackground/js.png" alt="js">
                 </li>
                 <li data-pile="Technologie aktywne:">
                   <span class="tp-info center-block">
@@ -146,7 +146,7 @@
                       Pisanie prostych skryptów.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/jquery.png">
+                  <img src="icons/whiteBackground/jquery.png" alt="jquery">
                 </li>
                 <li data-pile="Technologie aktywne:">
                   <span class="tp-info center-block">
@@ -154,7 +154,7 @@
                       Pisanie prostych skryptów.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/AJAX.png">
+                  <img src="icons/whiteBackground/AJAX.png" alt="AJAX">
                 </li>
 
                 <!-- inne -->
@@ -165,7 +165,7 @@
                       Znajomość podstawowych komend.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/grunt.png">
+                  <img src="icons/whiteBackground/grunt.png" alt="grunt">
                 </li>
                 <li data-pile="Pozostałe technologie:">
                   <span class="tp-info">
@@ -173,7 +173,7 @@
                       Znajomość podstawowych komend, praca z GITBushem, GITHubem.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/github.png">
+                  <img src="icons/whiteBackground/github.png" alt="github">
                 </li>
                 <li data-pile="Pozostałe technologie:">
                   <span class="tp-info">
@@ -181,7 +181,7 @@
                       Odwzorowanie pixel perfect według projektu.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/ps.png">
+                  <img src="icons/whiteBackground/ps.png" alt="photoshop">
                 </li>
                 <li data-pile="Pozostałe technologie:">
                   <span class="tp-info">
@@ -189,7 +189,7 @@
                       Podstawowa obsługa oprogramowania.
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/inscape.png">
+                  <img src="icons/whiteBackground/inscape.png" alt="inscape">
                 </li>
                                 
                 <!-- nauka-->
@@ -200,7 +200,7 @@
                       React.js
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/react.png">
+                  <img src="icons/whiteBackground/react.png" alt="react">
                 </li>
                 <li data-pile="Czego się będę uczyć?">
                   <span class="tp-info">
@@ -208,7 +208,7 @@
                       Node.js
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/node.png">
+                  <img src="icons/whiteBackground/node.png" alt="node">
                 </li>
                 <li data-pile="Czego się będę uczyć?">
                   <span class="tp-info">
@@ -216,7 +216,7 @@
                       mongoDB
                     </span>
                   </span>
-                  <img src="icons/whiteBackground/mangoDb.png">
+                  <img src="icons/whiteBackground/mongoDb.png" alt="mongoDB">
                 </li>
                                
               </ul>
@@ -245,16 +245,16 @@
             </div>
             <div class="center">
               <div class="image">
-                <img src="./image/servis.jpg" class="img-responsive img-thumbnail">
+                <img src="./image/servis.jpg" class="img-responsive img-thumbnail" alt="servis">
                 <div class="ico">
-                  <img src="icons/blueIcons/HTML5.png" class="img-responsive">
-                  <img src="icons/blueIcons/css3.png" class="img-responsive">
-                  <img src="icons/blueIcons/sass.png" class="img-responsive">
-                  <img src="icons/blueIcons/rwd.png" class="img-responsive">
-                  <img src="icons/blueIcons/bootstrap.png" class="img-responsive">
-                  <img src="icons/blueIcons/jquery.png" class="img-responsive">
-                  <img src="icons/blueIcons/grunt.png" class="img-responsive">
-                  <img src="icons/blueIcons/github.png" class="img-responsive">
+                  <img src="icons/blueIcons/HTML5.png" class="img-responsive" alt="HTML5">
+                  <img src="icons/blueIcons/css3.png" class="img-responsive" alt="CSS3">
+                  <img src="icons/blueIcons/sass.png" class="img-responsive" alt="Sass">
+                  <img src="icons/blueIcons/rwd.png" class="img-responsive" alt="RWD">
+                  <img src="icons/blueIcons/bootstrap.png" class="img-responsive" alt="Bootstrap">
+                  <img src="icons/blueIcons/jquery.png" class="img-responsive" alt="jQuery">
+                  <img src="icons/blueIcons/grunt.png" class="img-responsive" alt="Grunt">
+                  <img src="icons/blueIcons/github.png" class="img-responsive" alt="GitHub">
                 </div>
                 <div class="btn-image">
                   <a href="https://github.com/grzegorz-swiderski/ServisPage" target="_blank"><button>GITHUB</button></a>
@@ -262,16 +262,16 @@
                 </div>
               </div>
               <div class="image">
-                <img src="./image/activebox.jpg" class="img-responsive img-thumbnail">
+                <img src="./image/activebox.jpg" class="img-responsive img-thumbnail" alt="ActiveBox">
                 <div class="ico">
-                  <img src="icons/blueIcons/HTML5.png" class="img-responsive">
-                  <img src="icons/blueIcons/css3.png" class="img-responsive">
-                  <img src="icons/blueIcons/sass.png" class="img-responsive">
-                  <img src="icons/blueIcons/rwd.png" class="img-responsive">
-                  <img src="icons/blueIcons/bootstrap.png" class="img-responsive">
-                  <img src="icons/blueIcons/jquery.png" class="img-responsive">
-                  <img src="icons/blueIcons/grunt.png" class="img-responsive">
-                  <img src="icons/blueIcons/github.png" class="img-responsive">
+                  <img src="icons/blueIcons/HTML5.png" class="img-responsive" alt="HTML5">
+                  <img src="icons/blueIcons/css3.png" class="img-responsive" alt="CSS3">
+                  <img src="icons/blueIcons/sass.png" class="img-responsive" alt="Sass">
+                  <img src="icons/blueIcons/rwd.png" class="img-responsive" alt="RWD">
+                  <img src="icons/blueIcons/bootstrap.png" class="img-responsive" alt="Bootstrap">
+                  <img src="icons/blueIcons/jquery.png" class="img-responsive" alt="jQuery">
+                  <img src="icons/blueIcons/grunt.png" class="img-responsive" alt="Grunt">
+                  <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
                   <a href="https://github.com/grzegorz-swiderski/ActiveBox" target="_blank"><button>GITHUB</button></a>
@@ -279,16 +279,16 @@
                 </div>
               </div>
               <div class="image">
-                <img src="./image/simple_photo.jpg" class="img-responsive img-thumbnail">
+                <img src="./image/simple_photo.jpg" class="img-responsive img-thumbnail" alt="Simple_photo">
                 <div class="ico">
-                  <img src="icons/blueIcons/HTML5.png" class="img-responsive">
-                  <img src="icons/blueIcons/css3.png" class="img-responsive">
-                  <img src="icons/blueIcons/sass.png" class="img-responsive">
-                  <img src="icons/blueIcons/rwd.png" class="img-responsive">
-                  <img src="icons/blueIcons/bootstrap.png" class="img-responsive">
-                  <img src="icons/blueIcons/jquery.png" class="img-responsive">
-                  <img src="icons/blueIcons/grunt.png" class="img-responsive">
-                  <img src="icons/blueIcons/github.png" class="img-responsive">
+                  <img src="icons/blueIcons/HTML5.png" class="img-responsive" alt="HTML5">
+                  <img src="icons/blueIcons/css3.png" class="img-responsive" alt="CSS3">
+                  <img src="icons/blueIcons/sass.png" class="img-responsive" alt="Sass">
+                  <img src="icons/blueIcons/rwd.png" class="img-responsive" alt="RWD">
+                  <img src="icons/blueIcons/bootstrap.png" class="img-responsive" alt="Bootstrap">
+                  <img src="icons/blueIcons/jquery.png" class="img-responsive" alt="jQuery">
+                  <img src="icons/blueIcons/grunt.png" class="img-responsive" alt="Grunt">
+                  <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
                   <a href="https://github.com/grzegorz-swiderski/Simple_photo" target="_blank"><button>GITHUB</button></a>
@@ -296,13 +296,13 @@
                 </div>
               </div>
               <div class="image">
-                <img src="./image/rock.jpg" class="img-responsive img-thumbnail">
+                <img src="./image/rock.jpg" class="img-responsive img-thumbnail" alt="RockPaperScissors">
                 <div class="ico">
-                  <img src="icons/blueIcons/HTML5.png" class="img-responsive">
-                  <img src="icons/blueIcons/css3.png" class="img-responsive">
-                  <img src="icons/blueIcons/rwd.png" class="img-responsive">
-                  <img src="icons/blueIcons/js.png" class="img-responsive">
-                  <img src="icons/blueIcons/github.png" class="img-responsive">
+                  <img src="icons/blueIcons/HTML5.png" class="img-responsive" alt="HTML5">
+                  <img src="icons/blueIcons/css3.png" class="img-responsive" alt="CSS3">
+                  <img src="icons/blueIcons/rwd.png" class="img-responsive" alt="RWD">
+                  <img src="icons/blueIcons/js.png" class="img-responsive" alt="JavaScript">
+                  <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
                   <a href="https://github.com/grzegorz-swiderski/RockPaperScissors" target="_blank"><button>GITHUB</button></a>
@@ -310,15 +310,15 @@
                 </div>
               </div>
               <div class="image">
-                <img src="./image/Quote.jpg" class="img-responsive img-thumbnail">
+                <img src="./image/Quote.jpg" class="img-responsive img-thumbnail" alt="QuoteMachine">
                 <div class="ico">
-                  <img src="icons/blueIcons/HTML5.png" class="img-responsive">
-                  <img src="icons/blueIcons/css3.png" class="img-responsive">
-                  <img src="icons/blueIcons/rwd.png" class="img-responsive">
-                  <img src="icons/blueIcons/jquery.png" class="img-responsive">
-                  <img src="icons/blueIcons/js.png" class="img-responsive">
-                  <img src="icons/blueIcons/AJAX.png" class="img-responsive">
-                  <img src="icons/blueIcons/github.png" class="img-responsive">
+                  <img src="icons/blueIcons/HTML5.png" class="img-responsive" alt="HTML5">
+                  <img src="icons/blueIcons/css3.png" class="img-responsive" alt="CSS3">
+                  <img src="icons/blueIcons/rwd.png" class="img-responsive" alt="RWD">
+                  <img src="icons/blueIcons/jquery.png" class="img-responsive" alt="jQuery">
+                  <img src="icons/blueIcons/js.png" class="img-responsive" alt="JavaScript">
+                  <img src="icons/blueIcons/AJAX.png" class="img-responsive" alt="AJAX">
+                  <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
                   <a href="https://github.com/grzegorz-swiderski/QuoteMachine" target="_blank"><button>GITHUB</button></a>
@@ -326,15 +326,15 @@
                 </div>
               </div>
               <div class="image">
-                <img src="./image/travel.jpg" class="img-responsive img-thumbnail">
+                <img src="./image/travel.jpg" class="img-responsive img-thumbnail" alt="Travel">
                 <div class="ico">
-                  <img src="icons/blueIcons/HTML5.png" class="img-responsive">
-                  <img src="icons/blueIcons/css3.png" class="img-responsive">
-                  <img src="icons/blueIcons/rwd.png" class="img-responsive">
-                  <img src="icons/blueIcons/jquery.png" class="img-responsive">
-                  <img src="icons/blueIcons/js.png" class="img-responsive">
-                  <img src="icons/blueIcons/AJAX.png" class="img-responsive">
-                  <img src="icons/blueIcons/github.png" class="img-responsive">
+                  <img src="icons/blueIcons/HTML5.png" class="img-responsive" alt="HTML5">
+                  <img src="icons/blueIcons/css3.png" class="img-responsive" alt="CSS3">
+                  <img src="icons/blueIcons/rwd.png" class="img-responsive" alt="RWD">
+                  <img src="icons/blueIcons/jquery.png" class="img-responsive" alt="jQuery">
+                  <img src="icons/blueIcons/js.png" class="img-responsive" alt="JavaScript">
+                  <img src="icons/blueIcons/AJAX.png" class="img-responsive" alt="AJAX">
+                  <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
                   <a href="https://github.com/grzegorz-swiderski/Travel" target="_blank"><button>GITHUB</button></a>
@@ -372,7 +372,7 @@
           </div>
           <div class="col-xs-12 col-md-6 col-md-offset-1">
             <h2 class="align">Przyszła współpraca?</h2>
-            <p class="text-justify">Jeśli moja oferta okazała się dla Ciebie być interesująca, zachęcam do kontaktu. Prześlij do mnie wiadomość, a postaram się na nią odpowiedzieć, jak najszybciej będzie to możliwe. Wspólnie dobierzemy właściwe rozwiązania, które zaspokoją Twoje potrzeby. Nie czekaj ani chwili dłużej! Wypełnij formularz i naciśnij przycisk "Wyślij", aby się ze mną skontaktować. </p>
+            <p class="text-justify">Jeśli moja oferta jest  dla Ciebie interesująca, zachęcam do kontaktu. Prześlij do mnie wiadomość, a postaram się na nią odpowiedzieć jak najszybciej. Wspólnie dobierzemy właściwe rozwiązania, które zaspokoją Twoje potrzeby. Nie czekaj ani chwili dłużej! Wypełnij formularz i naciśnij przycisk "Wyślij", aby się ze mną skontaktować. </p>
           </div>
         </div>
       </div>   
@@ -408,7 +408,7 @@
 
     <!--footer-->
 
-    <section id="footer">
+    <section id="myfooter">
       <div class="container">
         <p class="text-center">2017 Copyrights by Grzegorz Świderski</p>
       </div>        
