Index/Sass changes

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="slogan text-center">
           <h1> W czym mogę Ci pomóc?</h1>
         </div>
-        <a href="#about-me"><button class="btn btn-success btn-lg myBtn center-block">Zobacz co na Ciebie czeka...</button></a>
+        <a href="#about-me" class="btn btn-success btn-lg myBtn center-block">Zobacz co na Ciebie czeka...</a>
       </div>
     </section>
         
@@ -257,8 +257,8 @@
                   <img src="icons/blueIcons/github.png" class="img-responsive" alt="GitHub">
                 </div>
                 <div class="btn-image">
-                  <a href="https://github.com/grzegorz-swiderski/ServisPage" target="_blank"><button>GITHUB</button></a>
-                  <a href="https://grzegorz-swiderski.github.io/ServisPage/" target="_blank"><button>LIVE</button></a>
+                  <a href="https://github.com/grzegorz-swiderski/ServisPage" target="_blank" class="projectBtn">GITHUB</a>
+                  <a href="https://grzegorz-swiderski.github.io/ServisPage/" target="_blank" class = "projectBtn">LIVE</a>
                 </div>
               </div>
               <div class="image">
@@ -274,8 +274,8 @@
                   <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
-                  <a href="https://github.com/grzegorz-swiderski/ActiveBox" target="_blank"><button>GITHUB</button></a>
-                  <a href="https://grzegorz-swiderski.github.io/ActiveBox/" target="_blank"><button>LIVE</button></a>
+                  <a href="https://github.com/grzegorz-swiderski/ActiveBox" target="_blank" class="projectBtn">GITHUB</a>
+                  <a href="https://grzegorz-swiderski.github.io/ActiveBox/" target="_blank" class="projectBtn">LIVE</a>
                 </div>
               </div>
               <div class="image">
@@ -291,8 +291,8 @@
                   <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
-                  <a href="https://github.com/grzegorz-swiderski/Simple_photo" target="_blank"><button>GITHUB</button></a>
-                  <a href="https://grzegorz-swiderski.github.io/Simple_photo/" target="_blank"><button>LIVE</button></a>
+                  <a href="https://github.com/grzegorz-swiderski/Simple_photo" target="_blank" class="projectBtn">GITHUB</a>
+                  <a href="https://grzegorz-swiderski.github.io/Simple_photo/" target="_blank" class="projectBtn">LIVE</a>
                 </div>
               </div>
               <div class="image">
@@ -305,8 +305,8 @@
                   <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
-                  <a href="https://github.com/grzegorz-swiderski/RockPaperScissors" target="_blank"><button>GITHUB</button></a>
-                  <a href="https://grzegorz-swiderski.github.io/RockPaperScissors/" target="_blank"><button>LIVE</button></a>
+                  <a href="https://github.com/grzegorz-swiderski/RockPaperScissors" target="_blank" class="projectBtn">GITHUB</a>
+                  <a href="https://grzegorz-swiderski.github.io/RockPaperScissors/" target="_blank" class="projectBtn">LIVE</a>
                 </div>
               </div>
               <div class="image">
@@ -321,8 +321,8 @@
                   <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
-                  <a href="https://github.com/grzegorz-swiderski/QuoteMachine" target="_blank"><button>GITHUB</button></a>
-                  <a href="https://grzegorz-swiderski.github.io/QuoteMachine/" target="_blank"><button>LIVE</button></a>
+                  <a href="https://github.com/grzegorz-swiderski/QuoteMachine" target="_blank" class="projectBtn">GITHUB</a>
+                  <a href="https://grzegorz-swiderski.github.io/QuoteMachine/" target="_blank" class="projectBtn">LIVE</a>
                 </div>
               </div>
               <div class="image">
@@ -337,8 +337,8 @@
                   <img src="icons/blueIcons/github.png" class="img-responsive" alt="Github">
                 </div>
                 <div class="btn-image">
-                  <a href="https://github.com/grzegorz-swiderski/Travel" target="_blank"><button>GITHUB</button></a>
-                  <a href="https://grzegorz-swiderski.github.io/Travel/" target="_blank"><button>LIVE</button></a>
+                  <a href="https://github.com/grzegorz-swiderski/Travel" target="_blank" class="projectBtn">GITHUB</a>
+                  <a href="https://grzegorz-swiderski.github.io/Travel/" target="_blank" class="projectBtn">LIVE</a>
                 </div>
               </div>
             </div>
@@ -357,17 +357,17 @@
             <form action="https://formspree.io/grzegorzswiderski1988@gmail.com" method="POST">
               <div class="form-group">
                 <label for="NameandSurname">Imię i Nazwisko:</label>
-                <input type="text" class="form-control" id="NameandSurname" placeholder="Imię i nazwisko">
+                <input type="text" class="form-control" id="NameandSurname" placeholder="Imię i nazwisko" name="Name">
               </div>
               <div class="form-group">
-                <label for="email">Adres email:</label>
-                <input type="email" class="form-control" id="Email" placeholder="Adres e-mail">
+                <label for="yourEmail">Adres email:</label>
+                <input type="email" name="Email" class="form-control" id="Email" placeholder="Adres e-mail">
               </div>
   		      <div class="form-group">
                 <label for="InputMassage">Treść zapytania:</label>
                 <textarea name="InputMassage" id="InputMassage" class="form-control" rows="7" required placeholder="Treść zapytania"></textarea>
   		      </div>
-              <button type="submit" class="btn btn-default submit">Wyślij!</button>
+              <button type="submit" class="btn btn-default submit" value="Send">Wyślij!</button>
             </form>
           </div>
           <div class="col-xs-12 col-md-6 col-md-offset-1">
