--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"/> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="css/jInvertScroll.css" />
     <link rel="stylesheet" type="text/css" href="css/stapel.css"/>
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
@@ -360,13 +359,13 @@
                 <input type="text" class="form-control" id="NameandSurname" placeholder="Imię i nazwisko" name="Name">
               </div>
               <div class="form-group">
-                <label for="yourEmail">Adres email:</label>
+                <label for="Email">Adres email:</label>
                 <input type="email" name="Email" class="form-control" id="Email" placeholder="Adres e-mail">
               </div>
-  		      <div class="form-group">
+              <div class="form-group">
                 <label for="InputMassage">Treść zapytania:</label>
                 <textarea name="InputMassage" id="InputMassage" class="form-control" rows="7" required placeholder="Treść zapytania"></textarea>
-  		      </div>
+              </div>
               <button type="submit" class="btn btn-default submit" value="Send">Wyślij!</button>
             </form>
           </div>
